<resources>
    <string name="app_name">Wearable Health Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>

    
    <string name="pref_title_bluetooth">Bluetooth</string>
    <string name="pref_summary_bluetooth">Turn on Bluetooth Pairing with headset</string>

    <string name="pref_title_modules">Modules</string>
    <string name="pref_summary_module">Turn Modules On or Off</string>

    <string name="pref_title_module_pedometer">Pedometer</string>
    <string name="pref_summary_module_pedometer">Turn off step counter</string>
    
    <string name="pref_title_module_bloodox">Blood Oxygen</string>
    <string name="pref_summary_module_bloodox">Turn off blood oxygen concentration measurements</string>
    
    <string name="pref_title_module_pulse">Pulse</string>
    <string name="pref_summary_module_pulse">Turn off pulse rate measurement</string>
    
    <string name="pref_title_module_temperature">Thermometer</string>
    <string name="pref_summary_module_temperature">Turn off temperature measurements</string>

    <string name="pref_title_sampling_rates">Sampling Rates</string>
   	<string name="pref_summary_sampling_rates">Adjust how often a measurement is taken, lower sampling rates can increase battery life. Sampling rates can range from ### to ####.</string>

    <string name="pref_title_sampling_rate_pedometer">Pedometer</string>
    <string name="pref_summary_sampling_rate_pedometer">Sampling rate for step count</string>

    <string name="pref_title_sampling_rate_bloodox">Blood Oxygen</string>
    <string name="pref_summary_sampling_rate_bloodox">Sampling Rate for blood oxygen concentration</string>
    
    <string name="pref_title_sampling_rate_pulse">Pulse</string>
    <string name="pref_summary_sampling_rate_pulse">Sampling Rate for pulse rate</string>
    <string name="pref_dialogTitle_sampling_rate_pulse">Choose a Sampling Rate</string>

    <string-array name="pref_entries_sampling_rate_pulse">
    	<item>Low</item>
    	<item>Medium</item>
    	<item>High</item>
    </string-array>
    <string-array name="pref_entryValues_sampling_rate_pulse">
    	<item>250</item>
    	<item>500</item>
    	<item>750</item>
    </string-array>

    <!--Bluetooth Strings-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>
